Change of the colour
<h1> colour changed to beautiful pink

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
 
-        <h1>Bibi's Corner</h1>
+        <h1 style="color:pink;">Bibi's Corner</h1>
         
         <p> Gigi is learning HTML so I decided to open a w3spaces acount
             to see how it works! It's very cool.
